# Rula

./: README.md  README.txt  Useful commands  rotational_velocity.eps  useful_commands  vel_measurements.ods  voltage_log0.txt  voltage_log1.txt  voltage_log2.txt
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/jaguar4x4/: GPSInfo.h  IMUData.h  MotorBoardInfo.h  MotorBoardInfoArray.h  MotorData.h  MotorDataArray.h
devel/lib/imu_complementary_filter/: complementary_filter_node
devel/lib/imu_filter_madgwick/: imu_filter_node
devel/lib/ip_camera_node/: ip_camera_node
devel/lib/jaguar4x4/: jaguar4x4_Controller  jaguar4x4_imuController  jaguar4x4_motorController  jaguar4x4_node  keyboard_teleop
devel/lib/jaguar_description/: parser
devel/lib/joy/: joy_node
devel/lib/laser_proc/: laser_proc
devel/lib/odometry/: odometry_node
devel/lib/pkgconfig/: imu_complementary_filter.pc  imu_filter_madgwick.pc  ip_camera_node.pc  jaguar4x4.pc  jaguar_description.pc  joy.pc  laser_proc.pc  odometry.pc  rviz_imu_plugin.pc  teleop_twist_joy.pc  turtlebot_teleop.pc  urg_c.pc  urg_node.pc
devel/lib/teleop_twist_joy/: teleop_node
devel/lib/turtlebot_teleop/: turtlebot_teleop_joy
devel/lib/urg_c/: angle_convert_test  calculate_xy  find_port  get_distance  get_distance_intensity  get_multiecho  get_multiecho_intensity  reboot_test  sensor_parameter  sync_time_stamp  timeout_test
devel/lib/urg_node/: getID  urg_node
devel/share/imu_complementary_filter/cmake/: imu_complementary_filterConfig.cmake
devel/share/imu_filter_madgwick/cmake/: imu_filter_madgwickConfig.cmake
devel/share/ip_camera_node/cmake/: ip_camera_node-msg-paths.cmake  ip_camera_nodeConfig.cmake
devel/share/jaguar4x4/cmake/: jaguar4x4-msg-extras.cmake  jaguar4x4-msg-paths.cmake  jaguar4x4Config.cmake
devel/share/jaguar_description/cmake/: jaguar_descriptionConfig.cmake
devel/share/joy/cmake/: joyConfig.cmake
devel/share/laser_proc/cmake/: laser_procConfig.cmake
devel/share/odometry/cmake/: odometryConfig.cmake
devel/share/rviz_imu_plugin/cmake/: rviz_imu_pluginConfig.cmake
devel/share/teleop_twist_joy/cmake/: teleop_twist_joyConfig.cmake
devel/share/turtlebot_teleop/cmake/: turtlebot_teleopConfig.cmake
devel/share/urg_c/cmake/: urg_cConfig.cmake
devel/share/urg_node/cmake/: urg_nodeConfig.cmake
example/: DrRobotMotionSensorDriver.cpp  DrRobotMotionSensorDriver.hpp  drrobot_keyboard_teleop.cpp  drrobot_player.cpp  jaguar_cmd_vel.py  motorController_original
src/diff_drive_controller/test/: skidsteerbot_controllers.yaml
src/imu_filter_madgwick/cfg/: ImuFilterMadgwick.cfg
src/imu_filter_madgwick/src/: imu_filter_ros.cpp
src/imu_tools/imu_complementary_filter/src/: complementary_filter_ros.cpp
src/imu_tools/imu_filter_madgwick/src/: imu_filter_ros.cpp
src/ip_camera_ROS_node/: CMakeLists.txt  package.xml
src/ip_camera_ROS_node/config/: parameters.yaml
src/ip_camera_ROS_node/launch/: ip_camera_node.launch
src/ip_camera_ROS_node/src/: ip_camera_node.cpp
src/jaguar4x4/: CMakeLists.txt  package.xml
src/jaguar4x4/config/: laser_config.yaml
src/jaguar4x4/launch/: laser_node.launch  madgwick.launch
src/jaguar4x4/msg/: MotorData.msg
src/jaguar4x4/src/: motor_and_sensors_controller.cpp
src/jaguar_description/: CMakeLists.txt  package.xml  test.launch  xacro2urdf.txt
src/jaguar_description/launch/: load_robot_body_transformations.launch  load_robot_description_rviz.launch  load_urdf_into_rviz.launch  robot_body_transformations.launch  robot_description_rviz.launch  rula-config.rviz  urdf.rviz  urdf_global.rviz  urdf_local.rviz
src/jaguar_description/src/: static_odom_frame.cpp
src/jaguar_description/urdf/: jaguar.urdf.xacro  jaguar.urdf.xarco  model.urdf  sick_lms1xx_mount.urdf.xacro  wheel.urdf.xarco
src/jaguar_gmapping/: CMakeLists.txt  package.xml
src/jaguar_navigation/: CMakeLists.txt  package.xml
src/jaguar_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/jaguar_navigation/launch/: amcl_jaguar_wrapper.launch  amcl_localization.launch  amcl_navigation.launch  gmapping_jaguar_wrapper.launch  rviz_amcl_localization_config.rviz  rviz_amcl_navigation_config.rviz  rviz_gmapping_jaguar_config.rviz
src/jaguar_navigation/map/: inside.yaml  outside.yaml
src/jaguar_navigation/parameters/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/jaguar_odometry/: CMakeLists.txt  package.xml
src/jaguar_odometry/launch/: <launch>  ekf_GPS_wheel_IMU_localization.launch  ekf_localization.launch  ekf_wheel_IMU_localization.launch
src/jaguar_odometry/src/: diff_tf.cpp
src/jaguar_teleop/: CMakeLists.txt  package.xml
src/jaguar_teleop/launch/: jaguar_joy_logitech_teleop.launch  jaguar_keyboard_teleop.launch
src/motor_and_sensor_controllers/: CMakeLists.txt  jaguar_keyboard_teleop.launch
src/motor_and_sensor_controllers/include/: DrRobotMotionSensorDriver.hpp
src/motor_and_sensor_controllers/launch/: jaguar_controller.launch
src/motor_and_sensor_controllers/msg/: MotorDataArray.msg
src/motor_and_sensor_controllers/src/: DrRobotMotionSensorDriver.cpp  keyboard_teleop.cpp  motorController.cpp  motor_and_sensors_controller.cpp
src/odometry/: CMakeLists.txt  package.xml
src/odometry/src/: odometry.cpp  odometry2.cpp
src/odometry_jaguar/: CMakeLists.txt  package.xml
src/odometry_jaguar/src/: diff_tf.cpp  diff_tf1.cpp  diff_tf2.cpp  diff_tf_orig.cpp  twist_to_motor.cpp
src/robot_pose_ekf/: example_with_gps.launch
src/rviz_satellite-master/: CMakeLists.txt
src/teleop_twist_joy/: CMakeLists.txt
src/teleop_twist_joy/config/: logitech.config.yaml
src/teleop_twist_joy/launch/: jaguar_logitech_teleop.launch  logitech_teleop.launch
src/teleop_twist_joy/src/: teleop_node.cpp  teleop_twist_joy.cpp
src/urg_node/launch/: laser.launch
src/voltage_logging/: CMakeLists.txt  package.xml
src/voltage_logging/src/: voltage_logger.cpp  voltage_logging.cpp
(+21 files in other folders)
