<?xml version="1.0"?>
<package>
    <name>ip_camera_node</name>
    <version>0.0.1</version>
    <description>A package to make a IP camera ROS compatible</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="lohatzis@gmail.com">Iordanis Chatzinikolaidis</maintainer>
    <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>BSD</license>

    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <url type="website">https://github.com/ichatzinikolaidis/Roula.git</url>

    <!-- Author tags are optional, mutiple are allowed, one per tag -->
    <author email="gstavrinos@iit.demokritos.gr">George Stavrinos</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>image_transport</run_depend>
</package>