<?xml version="1.0"?>
<package>
    <name>jaguar_odometry</name>
    <version>0.0.1</version>
    <description>A odometry package for Dr Robot's Jaguar4x4</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="lohatzis@gmail.com">Iordanis Chatzinikolaidis</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>BSD</license>

    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <url type="website">https://github.com/ichatzinikolaidis/Roula.git</url>

    <!-- Author tags are optional, mutiple are allowed, one per tag -->
    <author email="lohatzis@gmail.com">Iordanis Chatzinikolaidis</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>jaguar4x4</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>jaguar4x4</run_depend>
</package>